@@ -3464,6 +3464,39 @@ argument_list|)
 throw|;
 block|}
 block|}
+if|if
+condition|(
+name|entry
+operator|.
+name|isLink
+argument_list|()
+condition|)
+block|{
+name|File
+name|src
+init|=
+operator|new
+name|File
+argument_list|(
+name|outputDir
+argument_list|,
+name|entry
+operator|.
+name|getLinkName
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|HardLink
+operator|.
+name|createHardLink
+argument_list|(
+name|src
+argument_list|,
+name|outputFile
+argument_list|)
+expr_stmt|;
+return|return;
+block|}
 name|int
 name|count
 decl_stmt|;
