@@ -131,17 +131,16 @@ name|DFSConfigKeys
 operator|.
 name|DFS_DATANODE_DATA_DIR_KEY
 argument_list|,
+operator|new
+name|File
+argument_list|(
 name|System
 operator|.
 name|getProperty
 argument_list|(
 literal|"test.build.data"
 argument_list|)
-operator|+
-name|File
-operator|.
-name|separator
-operator|+
+argument_list|,
 literal|"dfs"
 operator|+
 name|File
@@ -149,6 +148,13 @@ operator|.
 name|separator
 operator|+
 literal|"data"
+argument_list|)
+operator|.
+name|toURI
+argument_list|()
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|conf
@@ -159,17 +165,16 @@ name|DFSConfigKeys
 operator|.
 name|DFS_NAMENODE_NAME_DIR_KEY
 argument_list|,
+operator|new
+name|File
+argument_list|(
 name|System
 operator|.
 name|getProperty
 argument_list|(
 literal|"test.build.data"
 argument_list|)
-operator|+
-name|File
-operator|.
-name|separator
-operator|+
+argument_list|,
 literal|"dfs"
 operator|+
 name|File
@@ -177,6 +182,13 @@ operator|.
 name|separator
 operator|+
 literal|"name"
+argument_list|)
+operator|.
+name|toURI
+argument_list|()
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|upgrade
